@@ -98,7 +98,7 @@ sub get_dialog : Role(anon) {
 
    my $params = $req->query_params;
    my $name   = $params->( 'name' );
-   my $stash  = $self->get_stash( $req );
+   my $stash  = $self->initialise_stash( $req );
    my $page   = $stash->{page} = { hint   => $req->loc( 'Hint' ),
                                    layout => "${name}-user",
                                    meta   => { id => $params->( 'id' ), }, };
